--- a/onboarding-individual.html
+++ b/onboarding-individual.html
@@ -891,6 +891,7 @@
       <textarea id="triggers" name="triggers" placeholder="Please be careful with: grief around... or anxiety about..."></textarea>
       <div class="char-count">0 characters | 0 words</div>
 
+      <!-- ===== MODIFIED: Place Question 17 DIRECTLY under Question 16 (REPLACES previous position) ===== -->
       <label>
         17) Which areas of your life most need this gentle transformation? (select up to 3)
       </label>
@@ -900,15 +901,16 @@
           <label class="chip"><input type="checkbox" name="priority[]" value="family"> Family & Relationships</label>
           <label class="chip"><input type="checkbox" name="priority[]" value="health"> Physical Health & Energy</label>
         </div>
-        <div>          <label class="chip"><input type="checkbox" name="priority[]" value="mental"> Mental & Emotional Peace</label>
+        <div>
+          <label class="chip"><input type="checkbox" name="priority[]" value="mental"> Mental & Emotional Peace</label>
           <label class="chip"><input type="checkbox" name="priority[]" value="risk"> Courage & Growth</label>
           <label class="chip"><input type="checkbox" name="priority[]" value="relationships"> Meaningful Connection</label>
         </div>
       </div>
       <div class="hint" style="margin-top:12px">(Choose the areas where a little shift would create the biggest ripple of peace in your life.)</div>
+      <!-- ===== END MODIFIED 17 ===== -->
 
-      <!-- ===== ADDED: Question 17-B (OPEN, UNLIMITED) ===== -->
-      <!-- Question 17 - Open Reflection (ADDED - No limits) -->
+      <!-- KEEPING the open reflection 17-B AFTER the new 17 (optional deep response) -->
       <label for="priority_open_reflection">
         17-B) In your own words, what feels most urgent to heal or transform right now?
       </label>
@@ -923,7 +925,7 @@
         style="min-height: 260px;"
       ></textarea>
       <div class="char-count">Unlimited space · Speak freely</div>
-      <!-- ===== END ADDED 17-B ===== -->
+      <!-- END 17-B -->
 
       <!-- Personal details -->
       <div class="grid-2">
